@@ -4,6 +4,9 @@ CHANGE LOG
 
 2009-04-10 Warren L. DeLano <warren@delsci.com>	
 
+	* changed 'import pymol' behavior to defer launch until
+          finish_launching is actually called
+	
 	* added warnings for pml/py/pym run/@ confusion
 
 2009-04-09 Warren L. DeLano <warren@delsci.com>	
